syntax = "proto3";
package prism.treasury;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "prism/treasury/action.proto";

option go_package = "github.com/prism-finance/prism-core/x/treasury/types";

message FlowTrade {
  google.protobuf.Timestamp end_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  uint64 flow_id = 2;
  ActionType action_type = 3;
}
